// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/button/demo/basic.md correctly 1`] = `
<div>
  <button
    class="wmstool-btn wmstool-btn-primary"
    type="button"
  >
    <span>
      Primary
    </span>
  </button>
  <button
    class="wmstool-btn"
    type="button"
  >
    <span>
      Default
    </span>
  </button>
  <button
    class="wmstool-btn wmstool-btn-dashed"
    type="button"
  >
    <span>
      Dashed
    </span>
  </button>
  <button
    class="wmstool-btn wmstool-btn-danger"
    type="button"
  >
    <span>
      Danger
    </span>
  </button>
</div>
`;

exports[`renders ./components/button/demo/button-group.md correctly 1`] = `
<div>
  <h4>
    Basic
  </h4>
  <div
    class="wmstool-btn-group"
  >
    <button
      class="wmstool-btn"
      type="button"
    >
      <span>
        Cancel
      </span>
    </button>
    <button
      class="wmstool-btn"
      type="button"
    >
      <span>
        OK
      </span>
    </button>
  </div>
  <div
    class="wmstool-btn-group"
  >
    <button
      class="wmstool-btn"
      disabled=""
      type="button"
    >
      <span>
        L
      </span>
    </button>
    <button
      class="wmstool-btn"
      disabled=""
      type="button"
    >
      <span>
        M
      </span>
    </button>
    <button
      class="wmstool-btn"
      disabled=""
      type="button"
    >
      <span>
        R
      </span>
    </button>
  </div>
  <div
    class="wmstool-btn-group"
  >
    <button
      class="wmstool-btn"
      type="button"
    >
      <span>
        L
      </span>
    </button>
    <button
      class="wmstool-btn"
      type="button"
    >
      <span>
        M
      </span>
    </button>
    <button
      class="wmstool-btn"
      type="button"
    >
      <span>
        R
      </span>
    </button>
  </div>
  <h4>
    With Icon
  </h4>
  <div
    class="wmstool-btn-group"
  >
    <button
      class="wmstool-btn wmstool-btn-primary"
      type="button"
    >
      <i
        class="anticon anticon-left"
      />
      <span>
        Go back
      </span>
    </button>
    <button
      class="wmstool-btn wmstool-btn-primary"
      type="button"
    >
      <span>
        Go forward
      </span>
      <i
        class="anticon anticon-right"
      />
    </button>
  </div>
  <div
    class="wmstool-btn-group"
  >
    <button
      class="wmstool-btn wmstool-btn-primary wmstool-btn-icon-only"
      type="button"
    >
      <i
        class="anticon anticon-cloud"
      />
    </button>
    <button
      class="wmstool-btn wmstool-btn-primary wmstool-btn-icon-only"
      type="button"
    >
      <i
        class="anticon anticon-cloud-download"
      />
    </button>
  </div>
</div>
`;

exports[`renders ./components/button/demo/disabled.md correctly 1`] = `
<div>
  <button
    class="wmstool-btn wmstool-btn-primary"
    type="button"
  >
    <span>
      Primary
    </span>
  </button>
  <button
    class="wmstool-btn wmstool-btn-primary"
    disabled=""
    type="button"
  >
    <span>
      Primary(disabled)
    </span>
  </button>
  <br />
  <button
    class="wmstool-btn"
    type="button"
  >
    <span>
      Default
    </span>
  </button>
  <button
    class="wmstool-btn"
    disabled=""
    type="button"
  >
    <span>
      Default(disabled)
    </span>
  </button>
  <br />
  <button
    class="wmstool-btn"
    type="button"
  >
    <span>
      Ghost
    </span>
  </button>
  <button
    class="wmstool-btn"
    disabled=""
    type="button"
  >
    <span>
      Ghost(disabled)
    </span>
  </button>
  <br />
  <button
    class="wmstool-btn wmstool-btn-dashed"
    type="button"
  >
    <span>
      Dashed
    </span>
  </button>
  <button
    class="wmstool-btn wmstool-btn-dashed"
    disabled=""
    type="button"
  >
    <span>
      Dashed(disabled)
    </span>
  </button>
</div>
`;

exports[`renders ./components/button/demo/ghost.md correctly 1`] = `
<div
  style="background:rgb(190, 200, 200);padding:26px 16px 16px"
>
  <button
    class="wmstool-btn wmstool-btn-primary wmstool-btn-background-ghost"
    type="button"
  >
    <span>
      Primary
    </span>
  </button>
  <button
    class="wmstool-btn wmstool-btn-background-ghost"
    type="button"
  >
    <span>
      Default
    </span>
  </button>
  <button
    class="wmstool-btn wmstool-btn-dashed wmstool-btn-background-ghost"
    type="button"
  >
    <span>
      Dashed
    </span>
  </button>
  <button
    class="wmstool-btn wmstool-btn-danger wmstool-btn-background-ghost"
    type="button"
  >
    <span>
      danger
    </span>
  </button>
</div>
`;

exports[`renders ./components/button/demo/icon.md correctly 1`] = `
<div>
  <button
    class="wmstool-btn wmstool-btn-primary wmstool-btn-circle wmstool-btn-icon-only"
    type="button"
  >
    <i
      class="anticon anticon-search"
    />
  </button>
  <button
    class="wmstool-btn wmstool-btn-primary"
    type="button"
  >
    <i
      class="anticon anticon-search"
    />
    <span>
      Search
    </span>
  </button>
  <button
    class="wmstool-btn wmstool-btn-circle wmstool-btn-icon-only"
    type="button"
  >
    <i
      class="anticon anticon-search"
    />
  </button>
  <button
    class="wmstool-btn"
    type="button"
  >
    <i
      class="anticon anticon-search"
    />
    <span>
      Search
    </span>
  </button>
  <br />
  <button
    class="wmstool-btn wmstool-btn-circle wmstool-btn-icon-only"
    type="button"
  >
    <i
      class="anticon anticon-search"
    />
  </button>
  <button
    class="wmstool-btn"
    type="button"
  >
    <i
      class="anticon anticon-search"
    />
    <span>
      Search
    </span>
  </button>
  <button
    class="wmstool-btn wmstool-btn-dashed wmstool-btn-circle wmstool-btn-icon-only"
    type="button"
  >
    <i
      class="anticon anticon-search"
    />
  </button>
  <button
    class="wmstool-btn wmstool-btn-dashed"
    type="button"
  >
    <i
      class="anticon anticon-search"
    />
    <span>
      Search
    </span>
  </button>
</div>
`;

exports[`renders ./components/button/demo/loading.md correctly 1`] = `
<span>
  <button
    class="wmstool-btn wmstool-btn-primary wmstool-btn-loading"
    type="button"
  >
    <i
      class="anticon anticon-spin anticon-loading"
    />
    <span>
      Loading
    </span>
  </button>
  <button
    class="wmstool-btn wmstool-btn-primary wmstool-btn-sm wmstool-btn-loading"
    type="button"
  >
    <i
      class="anticon anticon-spin anticon-loading"
    />
    <span>
      Loading
    </span>
  </button>
  <br />
  <button
    class="wmstool-btn wmstool-btn-primary"
    type="button"
  >
    <span>
      Click me!
    </span>
  </button>
  <button
    class="wmstool-btn wmstool-btn-primary"
    type="button"
  >
    <i
      class="anticon anticon-poweroff"
    />
    <span>
      Click me!
    </span>
  </button>
  <br />
  <button
    class="wmstool-btn wmstool-btn-circle wmstool-btn-loading"
    type="button"
  >
    <i
      class="anticon anticon-spin anticon-loading"
    />
  </button>
  <button
    class="wmstool-btn wmstool-btn-primary wmstool-btn-circle wmstool-btn-loading"
    type="button"
  >
    <i
      class="anticon anticon-spin anticon-loading"
    />
  </button>
</span>
`;

exports[`renders ./components/button/demo/multiple.md correctly 1`] = `
<div>
  <button
    class="wmstool-btn wmstool-btn-primary"
    type="button"
  >
    <span>
      primary
    </span>
  </button>
  <button
    class="wmstool-btn"
    type="button"
  >
    <span>
      secondary
    </span>
  </button>
  <button
    class="wmstool-btn wmstool-dropdown-trigger"
    type="button"
  >
    <span>
      Actions 
    </span>
    <i
      class="anticon anticon-down"
    />
  </button>
</div>
`;

exports[`renders ./components/button/demo/size.md correctly 1`] = `
<div>
  <div
    class="wmstool-radio-group"
  >
    <label
      class="wmstool-radio-button-wrapper wmstool-radio-button-wrapper-checked"
    >
      <span
        class="wmstool-radio-button wmstool-radio-button-checked"
      >
        <input
          checked=""
          class="wmstool-radio-button-input"
          type="radio"
        />
        <span
          class="wmstool-radio-button-inner"
        />
      </span>
      <span>
        Large
      </span>
    </label>
    <label
      class="wmstool-radio-button-wrapper"
    >
      <span
        class="wmstool-radio-button"
      >
        <input
          class="wmstool-radio-button-input"
          type="radio"
        />
        <span
          class="wmstool-radio-button-inner"
        />
      </span>
      <span>
        Default
      </span>
    </label>
    <label
      class="wmstool-radio-button-wrapper"
    >
      <span
        class="wmstool-radio-button"
      >
        <input
          class="wmstool-radio-button-input"
          type="radio"
        />
        <span
          class="wmstool-radio-button-inner"
        />
      </span>
      <span>
        Small
      </span>
    </label>
  </div>
  <br />
  <br />
  <button
    class="wmstool-btn wmstool-btn-primary wmstool-btn-lg"
    type="button"
  >
    <span>
      Primary
    </span>
  </button>
  <button
    class="wmstool-btn wmstool-btn-lg"
    type="button"
  >
    <span>
      Normal
    </span>
  </button>
  <button
    class="wmstool-btn wmstool-btn-dashed wmstool-btn-lg"
    type="button"
  >
    <span>
      Dashed
    </span>
  </button>
  <button
    class="wmstool-btn wmstool-btn-danger wmstool-btn-lg"
    type="button"
  >
    <span>
      Danger
    </span>
  </button>
  <br />
  <button
    class="wmstool-btn wmstool-btn-primary wmstool-btn-circle wmstool-btn-lg wmstool-btn-icon-only"
    type="button"
  >
    <i
      class="anticon anticon-download"
    />
  </button>
  <button
    class="wmstool-btn wmstool-btn-primary wmstool-btn-lg"
    type="button"
  >
    <i
      class="anticon anticon-download"
    />
    <span>
      Download
    </span>
  </button>
  <br />
  <div
    class="wmstool-btn-group wmstool-btn-group-lg"
  >
    <button
      class="wmstool-btn wmstool-btn-primary"
      type="button"
    >
      <i
        class="anticon anticon-left"
      />
      <span>
        Backward
      </span>
    </button>
    <button
      class="wmstool-btn wmstool-btn-primary"
      type="button"
    >
      <span>
        Forward
      </span>
      <i
        class="anticon anticon-right"
      />
    </button>
  </div>
</div>
`;
